finish minip2